apps/in-cluster/platform/terralist/fileserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terralist-fileserver
  annotations:
    cert-manager.io/cluster-issuer: lab-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: terralist.lab.com
      http:
        paths:
          - path: /files(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: terralist
                port:
                  name: files
  tls:
    - hosts:
        - terralist.lab.com
      secretName: terralist-tls
